Enhance Crypto Trading Agency configuration and structure
- Updated `.env.sample` to include comprehensive environment variables for blockchain RPC URLs, API keys, trading configurations, risk management parameters, and market monitoring settings.
- Removed obsolete `.windsurfrules` file to streamline project structure.
- Refactored `main.py` to implement a new `CryptoTradingAgency` class that coordinates multiple trading agents, enhancing modularity and maintainability.
- Added detailed logging for environment variables and transaction handling to improve debugging and monitoring capabilities.
- Expanded `README.md` with setup instructions, project structure, and agent descriptions for better onboarding.
- Updated `requirements.txt` to include additional dependencies for blockchain interaction and data processing.

This commit significantly improves the configuration and operational capabilities of the trading agency.

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,63 @@
-DB_TOKEN= # https://www.random.org/passwords/?num=5&len=32&format=html&rnd=new
+# Blockchain RPC URLs
+SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+SOLANA_WS_URL=wss://api.mainnet-beta.solana.com
+ETH_RPC_URL=https://mainnet.infura.io/v3/your-project-id
+BSC_RPC_URL=https://bsc-dataseed.binance.org
+POLYGON_RPC_URL=https://polygon-rpc.com
+
+# API Keys
+TWITTER_BEARER_TOKEN=your-twitter-bearer-token
+NEWS_API_KEY=your-news-api-key
+
+# Trading Configuration
+TRADING_WALLET_KEYPAIR=your-base58-encoded-private-key
+TARGET_WALLETS=["wallet1", "wallet2"]
+TARGET_TOKENS=["SOL", "BTC", "ETH"]
+MONITORED_PROGRAMS=["program1", "program2"]
+DEFAULT_DEX=raydium
+
+# Risk Management Parameters
+INITIAL_PORTFOLIO_VALUE=10000
+MAX_POSITION_SIZE_PCT=5.0
+MAX_DAILY_TRADES=10
+MAX_DAILY_DRAWDOWN_PCT=3.0
+RISK_PER_TRADE_PCT=1.0
+DEFAULT_STOP_LOSS_PCT=2.0
+DEFAULT_TAKE_PROFIT_PCT=4.0
+TRAILING_STOP_ACTIVATION_PCT=2.0
+TRAILING_STOP_DISTANCE_PCT=1.5
+
+# Market Monitoring Parameters
+MIN_TRANSACTION_SIZE=0.1
+MIN_LIQUIDITY=10000
+VOLUME_CHANGE_THRESHOLD=200
+PRICE_CHANGE_THRESHOLD=5
+SENTIMENT_THRESHOLD=0.2
+MIN_MENTIONS=10
+MIN_SOL_TRANSACTION_SIZE=1000.0
+MIN_TRANSACTION_VALUE=1000.0
+
+# Multi-chain Configuration
+SUPPORTED_CHAINS=[
+    {
+        "name": "ethereum",
+        "rpc_url_env": "ETH_RPC_URL",
+        "chain_id": 1
+    },
+    {
+        "name": "bsc",
+        "rpc_url_env": "BSC_RPC_URL",
+        "chain_id": 56
+    },
+    {
+        "name": "polygon",
+        "rpc_url_env": "POLYGON_RPC_URL",
+        "chain_id": 137
+    }
+]
+
+MONITORED_CONTRACTS={
+    "ethereum": ["0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D"],
+    "bsc": ["0x10ED43C718714eb63d5aA57B78B54704E256024E"],
+    "polygon": []
+}
